@@ -39,6 +39,8 @@ enum _midi_window_columns
   INDEX_COLUMN,
   CHANNEL_COLUMN,
   PARAM_COLUMN,
+  MINVALUE_COLUMN,
+  MAXVALUE_COLUMN,
   MIDI_CONTROL_POINTER,
   N_COLUMNS
 };
